--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+
+management.security.enabled=true
+management.security.roles=ADMIN
+ 
+security.basic.enabled=true
+security.user.name=ops
+security.user.password=psw
